fix: no quotes around repo-token?

--- a/action.yml
+++ b/action.yml
@@ -13,5 +13,5 @@ runs:
   using: "docker"
   image: "Dockerfile"
   args:
-    - --repo-token="${{ inputs.repo-token }}"
+    - --repo-token=${{ inputs.repo-token }}
     - --run-id=${{ inputs.run-id }}
