--- a/action.yml
+++ b/action.yml
@@ -15,6 +15,8 @@ inputs:
     description: "AWS Access Key ID. Required if destination is 's3'."
   aws-secret-access-key:
     description: "AWS Secret Access Key. Required if destination is 's3'."
+  aws-region:
+    description: "AWS Region in which the S3 bucket is located. Required if destination is 's3'."
   s3-bucket-name:
     description: "S3 Bucket to export workflow logs to. Required if destination is 's3'."
   s3-key:
@@ -29,5 +31,6 @@ runs:
     - --destination=${{ inputs.destination }}
     - --aws-access-key-id=${{ inputs.aws-access-key-id }}
     - --aws-secret-access-key=${{ inputs.aws-secret-access-key }}
+    - --aws-region=${{ inputs.aws-region }}
     - --s3-bucket-name=${{ inputs.s3-bucket-name }}
     - --s3-key=${{ inputs.s3-key }}
