Add misc tests (#6)
* ci: test on push

* ci: use makefile

* refactor: move downloadFileByURL to util

* refactor: remove else

* refactor: extract  getWorkflowRunLogsURLForRunID, return err on missing env in GetRequiredEnv

* test: add TestGetRequiredEnv

* docs: annotate GetRequiredEnv

* refactor: use named returns

* test: add TestDownloadFileByURL

* test: consolidate success/failure test cases

* feat: add more debug logs

* fix: fix bad var name

* test: add  TestGetWorkflowRunLogsURLForRunID

* test: add TestSaveToS3

* refactor: move temp dir cleanup to saveToS3

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,6 +4,9 @@ on:
   pull_request:
     branches:
       - main
+  push:
+    branches:
+      - main
 
 jobs:
   test:
@@ -17,4 +20,4 @@ jobs:
           cache: true
 
       - name: Test
-        run: go test -v
+        run: make test
