--- a/action.yml
+++ b/action.yml
@@ -24,7 +24,7 @@ inputs:
 
 runs:
   using: "docker"
-  image: ghcr.io/timorthi/export-workflow-logs:sha-613ac49
+  image: docker://ghcr.io/timorthi/export-workflow-logs:sha-613ac49
   args:
     - --repo-token=${{ inputs.repo-token }}
     - --run-id=${{ inputs.run-id }}
