Revert "chore: build image"
This reverts commit 4be3dc911a94a84dec401f8f34d690afe2418495.

--- a/action.yml
+++ b/action.yml
@@ -28,7 +28,7 @@ inputs:
 
 runs:
   using: "docker"
-  image: Dockerfile
+  image: docker://ghcr.io/timorthi/export-workflow-logs:sha-613ac49
   args:
     - --repo-token=${{ inputs.repo-token }}
     - --run-id=${{ inputs.run-id }}
