--- a/action.yml
+++ b/action.yml
@@ -38,7 +38,7 @@ inputs:
 
 runs:
   using: "docker"
-  image: "Dockerfile"
+  image: docker://ghcr.io/timorthi/export-workflow-logs:sha-e685a32
   args:
     - --repo-token=${{ inputs.repo-token }}
     - --run-id=${{ inputs.run-id }}
