Support authenticating to AWS with temporary credentials (session token) (#19)
* feat: add aws-session-token action input

* build: add cz config

* docs: remove incorrect description

* build(vscode): set tab size and disable indent detection

* feat: read session token from action input

* feat: set AWS_SESSION_TOKEN if token is included in action input

* build(action): use dockerfile

* build(docker): install upx-ucl

* Revert "build(docker): install upx-ucl"

This reverts commit e1fab78ecc20d0b2215eb32bcfb218c12aa6accd.

* build(docker): use buster, install upx-ucl

* style: autoformat

* build: detect indentation

* docs: make phrasing clearer

* docs: add aws-session-token input

* docs: use oidc authentication for quick start example

* docs: add newline

* docs: autoformat

* Revert "build(action): use dockerfile"

This reverts commit 3c88ea179f25c6b2f1b6cfd7a9a963a2cf51f4cf.

--- a/action.yml
+++ b/action.yml
@@ -19,6 +19,8 @@ inputs:
     description: "AWS Access Key ID. Required if destination is 's3'."
   aws-secret-access-key:
     description: "AWS Secret Access Key. Required if destination is 's3'."
+  aws-session-token:
+    description: "AWS Session Token. Required if destination is 's3' and if using temporary credentials."
   aws-region:
     description: "AWS Region in which the S3 bucket is located. Required if destination is 's3'."
   s3-bucket-name:
@@ -43,6 +45,7 @@ runs:
     - --destination=${{ inputs.destination }}
     - --aws-access-key-id=${{ inputs.aws-access-key-id }}
     - --aws-secret-access-key=${{ inputs.aws-secret-access-key }}
+    - --aws-session-token=${{ inputs.aws-session-token }}
     - --aws-region=${{ inputs.aws-region }}
     - --s3-bucket-name=${{ inputs.s3-bucket-name }}
     - --s3-key=${{ inputs.s3-key }}
