build: build image for testing

--- a/action.yml
+++ b/action.yml
@@ -42,7 +42,7 @@ inputs:
 
 runs:
   using: "docker"
-  image: docker://ghcr.io/timorthi/export-workflow-logs:sha-c996820
+  image: "Dockerfile"
   args:
     - --repo-token=${{ inputs.repo-token }}
     - --run-id=${{ inputs.run-id }}
